--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>YZ Tour : 떠나고싶다면? 당신의 여행파트너, YZ Tour와 함께   </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,16 +17,15 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">YZ Tour</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">메인</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">예약하기</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">국내패키지상품</a></li>
+									<li><a href="right-sidebar.html">해외패키지상품</a></li>
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -38,8 +37,9 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="elements.html">마이메뉴</a></li>
+							<li><a href="login.html" class="button primary">로그인</a></li>
+							<li><a href="join.html" class="button primary">회원가입</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -48,9 +48,11 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>떠나고 싶은 여행지가 있나요? 전세계 어디라도</h2>
+							<p>안녕하세요. 당신의 설레는 여행을 책임질 YZ투어입니다.<br>
+
+								Just one click, you can travel Everywhere <br>
+								Make a reservation Right Now ! Let's go traveling.</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
@@ -65,23 +67,28 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>해외패키지여행 Top8</h2>
+										<p>해외여행 Top8 을 소개합니다</p>
+										<h5>#첫 배낭여행 #부모님효도여행 #허니문 </h5><br/>
 									</header>
+									<ul class="actions">
+										<li><a href="#" class="button">해외여행 예약하러가기</a></li>
+									</ul>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>서유럽3개국(프랑스,스위스,이탈리아) #로마투어<br>
+										-튀르키예(터키) 일주 8.9.10일 #동굴호텔<br/>
+										-스페인 일주 8,9일 #베스트셀러<br/>
+										-오사카 자유여행 3,4,5일 #시내중심 호텔<br/>
+										-훗카이도 4일 #인기 온천 호텔 #미식여행<br/>
+										-괌 자유여행 4,5,6일 #공항↔호텔 왕복셔틀<br/>
+										-싱가포르 5,6일 #1일 자유 #호텔 업그레이드<br/>
+										-보라카이 자유여행 4,5,6일 #헤난 가든 리조트<br/>
+									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>신혼여행, 부모님효도여행, 배낭여행족에게 가성비 좋은 여행코스로 구성된 패키지로 YJ여행사에서 가장 많이 판매된 패키지 Top8 을 선정했습니다.<br>
+										We selected the top 8 best-selling package by YJ Travel Agency as a package consisting of honeymoon,filial trip for parents, and cost-effective travel courses for backpackers.</p>
 								</div>
 							</div>
 						</div>
@@ -94,12 +101,16 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>국내여행</h2>
+							<p>국내여행 BEST 인기상품을 소개합니다</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>-제주패키지 #Jeju in Island<br/>
+							-울릉도패키지 #섬지순례#울릉도로<br/>
+							-내륙패키지 #거제/통영/남해/여수<br/>
+						</p>
+						<p>#여행의 첫시작?국내여행부터#핫플레이스 #제주</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">국내여행 예약하러가기</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -110,12 +121,13 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Q&A게시판</h2>
+							<p>여행관련 문의 게시판입니다</p>
+							자주찾는질문<br/>1:1게시판 <br/></p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>This is a travel inquiry bulletin board We'll give you a quick answer.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="QA.html" class="button">Q&A남기기</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -125,48 +137,30 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>Contact us</h2>
+							<p></p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-4-medium col-5-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p>Kakao Talk</p>
+									<h6>카카오톡 상담 (카카오톡 ID: YZ Tour)<br/>
+										If you contact us on Kakao Talk, you can consult more quickly</h6>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-4-medium col-5-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p><a href="" onclick="alert('이메일 tok_o@naver.com 로 이메일 발신부탁드립니다.');">E-mail</a></p>
+									<h6>이메일보내기<br/>
+										Contact us by E-mail</h6>
 								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="col-4 col-6-medium col-12-xsmall">
+								<section class="col-4 col-4-medium col-5-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<p><a href="#">회원탈퇴</a></p>
+									<h6>회원을 탈퇴합니다<br/>withdraw from the membership</h6>
 								</section>
 							</div>
 						</div>
-						<footer class="major">
-							<ul class="actions special">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
-							</ul>
-						</footer>
 					</div>
 				</section>
 
@@ -174,13 +168,13 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>다음여행지는 어디로 갈까?</h2>
+							<p>떠나고싶은 여행지가있나요? 검색해보세요!</p>
 						</header>
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
+								<div class="col-8 col-12-xsmall"><input type="text" name="search" placeholder="다음엔 어디로 여행갈까?" /></div>
+								<div class="col-4 col-12-xsmall"><input type="submit" value="지도보기" class="fit primary" /></div>
 							</div>
 						</form>
 					</div>
@@ -197,7 +191,8 @@
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>대표자 : 권예지</li><li>☎ TEL 010-7129-3630</li><br/><br/>
+						<li>본사주소 : 서울시 강남대로 1000억빌딩 YZ투어</li>
 					</ul>
 				</footer>
 
