--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">YZ Tour</a></h1>
+					<h1 id="logo"><a href="index.html">당신의 여행파트너, YZ Tour</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">메인</a></li>
@@ -87,7 +87,7 @@
 									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>신혼여행, 부모님효도여행, 배낭여행족에게 가성비 좋은 여행코스로 구성된 패키지로 YJ여행사에서 가장 많이 판매된 패키지 Top8 을 선정했습니다.<br>
+									<p>신혼여행, 부모님효도여행, 배낭여행족에게 가성비 좋은 여행코스로 구성된 패키지로 가장 많이 판매된 패키지 Top8 을 선정했습니다.<br>
 										We selected the top 8 best-selling package by YJ Travel Agency as a package consisting of honeymoon,filial trip for parents, and cost-effective travel courses for backpackers.</p>
 								</div>
 							</div>
@@ -98,7 +98,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/travelpic.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>국내여행</h2>
@@ -118,7 +118,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/airportman.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Q&A게시판</h2>
