--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -17,16 +17,15 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">당신의 여행파트너, YZ Tour</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">메인</a></li>
 							<li>
-								<a href="#">Layouts</a>
+								<a href="#">예약하기</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">국내패키지상품</a></li>
+									<li><a href="right-sidebar.html">해외패키지상품</a></li>
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -38,8 +37,9 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li><a href="elements.html">마이메뉴</a></li>
+							<li><a href="login.html" class="button primary">로그인</a></li>
+							<li><a href="join.html" class="button primary">회원가입</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -47,18 +47,20 @@
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container" align="center">
-						<header>
-							<h2>로그인</h2>
-							<form action="index.html" method="post">
-								<input type="text" name="id" size="10" placeholder="아이디를 입력하세요" maxlength="10" >
-								<input type="password" name="pwd" size="10" placeholder="비밀번호 8자리를 입력하세요" maxlength="8" ><br/>
-								<input class="button primary" type="submit" value="로그인" size="15">
-							</form>
-						</header>
-						<div class="row gtr-150">
-							<div class="col-8 col-12-medium">
 
-							</div>
+							<h2>로그인</h2>
+						<section>
+							<form action="index.html" method="post">
+								<input type="text" name="id" size="5" placeholder="아이디를 입력하세요" maxlength="10" >
+								<input type="password" name="pwd" size="5" placeholder="비밀번호 8자리를 입력하세요" maxlength="8" ><br/>
+								<input class="button primary" type="submit" value="로그인" >
+								<a href="index.html" class="button">취소</a><br/>
+								<a href="">아이디 찾기</a> ㅣ
+								<a href="">비밀번호 찾기</a> ㅣ
+								<a href="">회원가입</a>
+							</form>
+						</section>
+
 							<!--<div class="col-4 col-12-medium">
 
 								 Sidebar
@@ -86,7 +88,7 @@
 									</section>
 
 							</div>-->
-						</div>
+
 					</div>
 				</div>
 
