--- a/src/main/resources/static/join.html
+++ b/src/main/resources/static/join.html
@@ -11,97 +11,174 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+
+		<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+
+		<style>
+		body {
+		  min-height: 100vh;
+
+		  background: -webkit-gradient(linear, left bottom, right top, from(#fff), to(#212529));
+		  background: -webkit-linear-gradient(bottom left, #212529 0%, #212529 100%);
+		  background: -moz-linear-gradient(bottom left, #212529 0%, #212529 100%);
+		  background: -o-linear-gradient(bottom left, #212529 0%, #212529 100%);
+		  background: linear-gradient(to top right, #212529 0%, #212529 100%);
+		}
+
+		.input-form {
+		max-width: 700px;
+
+		margin-top: 20px;
+		margin-bottom: 20px;
+		padding: 20px;
+
+		background: #;
+		-webkit-border-radius: 10px;
+		-moz-border-radius: 10px;
+		border-radius: 10px;
+		-webkit-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+		-moz-box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+		box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15)
+		}
+		</style>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+			<header id="header">
+				<h1 id="logo"><a href="index.html">당신의 여행파트너, YZ Tour</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">메인</a></li>
+						<li>
+							<a href="#">예약하기</a>
+							<ul>
+								<li><a href="left-sidebar.html">국내패키지상품</a></li>
+								<li><a href="right-sidebar.html">해외패키지상품</a></li>
+								<li>
+									<a href="#">Submenu</a>
+									<ul>
+										<li><a href="#">Option 1</a></li>
+										<li><a href="#">Option 2</a></li>
+										<li><a href="#">Option 3</a></li>
+										<li><a href="#">Option 4</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li><a href="elements.html">마이메뉴</a></li>
+						<li><a href="login.html" class="button primary">로그인</a></li>
+						<li><a href="join.html" class="button primary">회원가입</a></li>
+					</ul>
+				</nav>
+			</header>
 
 			<!-- Main -->
-				<div id="main" class="wrapper style1">
-					<div class="container">
-						<header class="major">
-							<h2>Right Sidebar</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
-						</header>
-						<div class="row gtr-150">
-							<div class="col-8 col-12-medium">
-
-								<!-- Content -->
-									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
-									</section>
-
+			<div class="container">
+				<div class="input-form-backgroud row">
+					<div class="input-form col-md-12 mx-auto">
+						<h4 class="mb-3">회원가입</h4>
+						<form action="index.html" class="validation-form" novalidate>
+							<div class="row">
+								<div class="col-md-6 mb-3">
+									<label for="id">아이디</label>
+									<input type="text" class="form-control" id="id" placeholder="" value="" maxlength="10" required>
+									<div class="invalid-feedback">
+										ID를 입력해주세요.(1~10자이내)
+									</div>
+								</div>
+								<div class="col-md-6 mb-3">
+									<label for="pwd">비밀번호</label>
+									<input type="password" class="form-control" id="pwd" placeholder="" value="" maxlength="8" required>
+									<div class="invalid-feedback">
+										비밀번호를 입력해주세요.(1~8자이내)
+									</div>
+								</div>
+								<div class="col-md-6 mb-3">
+									<label for="name">이름</label>
+									<input type="text" class="form-control" id="name" placeholder="" value="" maxlength="5" required>
+									<div class="invalid-feedback">
+										이름을 입력해주세요.
+									</div>
+								</div>
+								<div class="col-md-6 mb-3">
+									<label for="phoneNumber">연락처</label>
+									<input type="text" class="form-control" id="nickname" placeholder="" value="" maxlength="13"required>
+									<div class="invalid-feedback">
+										연락처를 입력해주세요.
+									</div>
+								</div>
 							</div>
-							<div class="col-4 col-12-medium">
 
-								<!-- Sidebar -->
-									<section id="sidebar">
-										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-										<hr />
-										<section>
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
-									</section>
-
+							<div class="mb-3">
+								<label for="email">이메일</label>
+								<input type="email" class="form-control" id="email" placeholder="you@example.com" required>
+								<div class="invalid-feedback">
+									이메일을 입력해주세요.
+								</div>
 							</div>
-						</div>
+
+							<div class="mb-3">
+								<label for="address">주소</label>
+								<input type="text" class="form-control" id="address" placeholder="서울특별시 강남구" required>
+								<div class="invalid-feedback">
+									주소를 입력해주세요.
+								</div>
+							</div>
+
+							<div class="mb-3">
+								<label for="address2">상세주소<span class="text-muted">&nbsp;(필수 아님)</span></label>
+								<input type="text" class="form-control" id="address2" placeholder="상세주소를 입력해주세요.">
+							</div>
+
+							<div class="row">
+								<div class="col-md-8 mb-3">
+									<label for="root">가입 경로</label>
+									<select class="custom-select d-block w-100" id="root">
+										<option value=""></option>
+										<option>검색</option>
+										<option>카페</option>
+									</select>
+									<div class="invalid-feedback">
+										가입 경로를 선택해주세요.
+									</div>
+								</div>
+								<div class="col-md-4 mb-3">
+									<label for="code">추천인 코드<span class="text-muted">&nbsp;(필수 아님)</span></label>
+									<input type="text" class="form-control" id="code" placeholder="추천인">
+								</div>
+							</div>
+							<hr class="mb-4">
+							<div class="custom-control custom-checkbox">
+								<input type="checkbox" class="custom-control-input" id="aggrement" required>
+								<label class="custom-control-label" for="aggrement">개인정보 수집 및 이용에 동의합니다.</label>　　　　
+							<button class="button primary" type="submit">가입 완료</button>
+							<a href="index.html" class="button">취소</a>
+							</div>
+						</form>
 					</div>
 				</div>
+			</div>
+			<script>
+				window.addEventListener('load', () => {
+				  const forms = document.getElementsByClassName('validation-form');
+
+				  Array.prototype.filter.call(forms, (form) => {
+					form.addEventListener('submit', function (event) {
+					  if (form.checkValidity() === false) {
+						event.preventDefault();
+						event.stopPropagation();
+					  }
+
+					  form.classList.add('was-validated');
+					}, false);
+				  });
+				}, false);
+			</script>
+
+
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -114,21 +191,20 @@
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>대표자 : 권예지</li><li>☎ TEL 010-7129-3630</li><br/><br/>
+						<li>본사주소 : 서울시 강남대로 1000억빌딩 YZ투어</li>
 					</ul>
 				</footer>
-
 		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+			<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/jquery.scrolly.min.js"></script>
+				<script src="assets/js/jquery.dropotron.min.js"></script>
+				<script src="assets/js/jquery.scrollex.min.js"></script>
+				<script src="assets/js/browser.min.js"></script>
+				<script src="assets/js/breakpoints.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<script src="assets/js/main.js"></script>
 	</body>
 </html>
