--- a/src/main/resources/static/mypage원본.html
+++ b/src/main/resources/static/mypage원본.html
@@ -26,9 +26,8 @@
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="local.html">국내패키지상품</a></li>
+									<li><a href="overseas.html">해외패키지상품</a></li>
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -40,7 +39,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="mymenu.html">Elements</a></li>
 							<li><a href="#" class="button primary">Sign Up</a></li>
 						</ul>
 					</nav>
@@ -50,7 +49,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Elements</h2>
+							<h2>마이메뉴</h2>
 							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
 						</header>
 
