--- a/src/main/resources/static/qna.html
+++ b/src/main/resources/static/qna.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Landed by HTML5 UP</title>
+		<title>YZ Tour : Q & A</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,33 +16,43 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+			<header id="header">
+				<h1 id="logo"><a href="index.html">당신의 여행파트너, YZ Tour</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">메인</a></li>
+						<li>
+							<a href="#">예약하기</a>
+							<ul>
+								<li><a href="local.html">국내패키지상품</a></li>
+								<li><a href="overseas.html">해외패키지상품</a></li>
+								<li>
+									<a href="#">Submenu</a>
+									<ul>
+										<li><a href="#">Option 1</a></li>
+										<li><a href="#">Option 2</a></li>
+										<li><a href="#">Option 3</a></li>
+										<li><a href="#">Option 4</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="mypage.html">마이페이지</a>
+							<ul>
+								<li><a href="#">내가입정보</a></li>
+								<li><a href="#">내가 쓴글</a></li>
+								<li><a href="#">예약확인 / 취소</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="notice.html">고객게시판</a>
+						</li>
+						<li><a href="login.html" class="button primary small">로그인</a></li>
+						<li><a href="join.html" class="button primary small">회원가입</a></li>
+					</ul>
+				</nav>
+			</header>
 
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
