--- a/src/main/resources/static/join.html
+++ b/src/main/resources/static/join.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Landed by HTML5 UP</title>
+		<title>YZ Tour : 회원가입</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -55,8 +55,8 @@
 						<li>
 							<a href="#">예약하기</a>
 							<ul>
-								<li><a href="left-sidebar.html">국내패키지상품</a></li>
-								<li><a href="right-sidebar.html">해외패키지상품</a></li>
+								<li><a href="local.html">국내패키지상품</a></li>
+								<li><a href="overseas.html">해외패키지상품</a></li>
 								<li>
 									<a href="#">Submenu</a>
 									<ul>
@@ -68,9 +68,19 @@
 								</li>
 							</ul>
 						</li>
-						<li><a href="elements.html">마이메뉴</a></li>
-						<li><a href="login.html" class="button primary">로그인</a></li>
-						<li><a href="join.html" class="button primary">회원가입</a></li>
+						<li>
+							<a href="mypage.html">마이페이지</a>
+							<ul>
+								<li><a href="#">내가입정보</a></li>
+								<li><a href="#">내가 쓴글</a></li>
+								<li><a href="#">예약확인 / 취소</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="notice.html">고객게시판</a>
+						</li>
+						<li><a href="login.html" class="button primary small">로그인</a></li>
+						<li><a href="join.html" class="button primary small">회원가입</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -78,34 +88,34 @@
 			<!-- Main -->
 			<div class="container">
 				<div class="input-form-backgroud row">
-					<div class="input-form col-md-12 mx-auto">
+					<div class="input-form col-md-12 mx-auto" style="color: rgb(255 255 255 / 50%)">
 						<h4 class="mb-3">회원가입</h4>
 						<form action="index.html" class="validation-form" novalidate>
 							<div class="row">
 								<div class="col-md-6 mb-3">
 									<label for="id">아이디</label>
-									<input type="text" class="form-control" id="id" placeholder="" value="" maxlength="10" required>
+									<input type="text" class="form-control" id="id" placeholder="" name="id" maxlength="10" required>
 									<div class="invalid-feedback">
 										ID를 입력해주세요.(1~10자이내)
 									</div>
 								</div>
 								<div class="col-md-6 mb-3">
 									<label for="pwd">비밀번호</label>
-									<input type="password" class="form-control" id="pwd" placeholder="" value="" maxlength="8" required>
+									<input type="password" class="form-control" id="pwd" placeholder="" name="pwd" maxlength="8" required>
 									<div class="invalid-feedback">
 										비밀번호를 입력해주세요.(1~8자이내)
 									</div>
 								</div>
 								<div class="col-md-6 mb-3">
 									<label for="name">이름</label>
-									<input type="text" class="form-control" id="name" placeholder="" value="" maxlength="5" required>
+									<input type="text" class="form-control" id="name" placeholder="" name="name" maxlength="5" required>
 									<div class="invalid-feedback">
 										이름을 입력해주세요.
 									</div>
 								</div>
 								<div class="col-md-6 mb-3">
 									<label for="phoneNumber">연락처</label>
-									<input type="text" class="form-control" id="nickname" placeholder="" value="" maxlength="13"required>
+									<input type="text" class="form-control" id="nickname" placeholder="" name="phone" maxlength="13"required>
 									<div class="invalid-feedback">
 										연락처를 입력해주세요.
 									</div>
@@ -114,7 +124,7 @@
 
 							<div class="mb-3">
 								<label for="email">이메일</label>
-								<input type="email" class="form-control" id="email" placeholder="you@example.com" required>
+								<input type="email" class="form-control" id="email" placeholder="you@example.com" name="email" required>
 								<div class="invalid-feedback">
 									이메일을 입력해주세요.
 								</div>
@@ -122,7 +132,7 @@
 
 							<div class="mb-3">
 								<label for="address">주소</label>
-								<input type="text" class="form-control" id="address" placeholder="서울특별시 강남구" required>
+								<input type="text" class="form-control" id="address" placeholder="서울특별시 강남구" name="address" required>
 								<div class="invalid-feedback">
 									주소를 입력해주세요.
 								</div>
@@ -130,14 +140,14 @@
 
 							<div class="mb-3">
 								<label for="address2">상세주소<span class="text-muted">&nbsp;(필수 아님)</span></label>
-								<input type="text" class="form-control" id="address2" placeholder="상세주소를 입력해주세요.">
+								<input type="text" class="form-control" id="address2" placeholder="상세주소를 입력해주세요." name="address2">
 							</div>
 
 							<div class="row">
 								<div class="col-md-8 mb-3">
 									<label for="root">가입 경로</label>
 									<select class="custom-select d-block w-100" id="root">
-										<option value=""></option>
+										<option value="root"></option>
 										<option>검색</option>
 										<option>카페</option>
 									</select>
@@ -146,8 +156,8 @@
 									</div>
 								</div>
 								<div class="col-md-4 mb-3">
-									<label for="code">추천인 코드<span class="text-muted">&nbsp;(필수 아님)</span></label>
-									<input type="text" class="form-control" id="code" placeholder="추천인">
+									<label for="code" >추천인 코드<span class="text-muted">&nbsp;(필수 아님)</span></label>
+									<input type="text" class="form-control" id="code" placeholder="추천인" name="recommend">
 								</div>
 							</div>
 							<hr class="mb-4">
