--- a/src/main/resources/static/join.html
+++ b/src/main/resources/static/join.html
@@ -77,7 +77,7 @@
 							</ul>
 						</li>
 						<li>
-							<a href="notice.html">고객게시판</a>
+							<a href="board.html">고객게시판</a>
 						</li>
 						<li><a href="login.html" class="button primary small">로그인</a></li>
 						<li><a href="join.html" class="button primary small">회원가입</a></li>
@@ -147,7 +147,7 @@
 								<div class="col-md-8 mb-3">
 									<label for="root">가입 경로</label>
 									<select class="custom-select d-block w-100" id="root">
-										<option value="root"></option>
+										<option value="">가입경로를 선택해주세요</option>
 										<option>검색</option>
 										<option>카페</option>
 									</select>
