--- a/src/main/resources/static/local.html
+++ b/src/main/resources/static/local.html
@@ -46,7 +46,7 @@
 							</ul>
 						</li>
 						<li>
-							<a href="notice.html">고객게시판</a>
+							<a href="board.html">고객게시판</a>
 						</li>
 						<li><a href="login.html" class="button primary small">로그인</a></li>
 						<li><a href="join.html" class="button primary small">회원가입</a></li>
@@ -71,7 +71,7 @@
 											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<li><a href="../calendar/calendar.html" class="button">Learn More</a></li>
 												</ul>
 											</footer>
 										</section>
