--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="notice.html">고객게시판</a>
+                        <a href="board.html">고객게시판</a>
                     </li>
                     <li><a href="login.html" class="button primary small">로그인</a></li>
                     <li><a href="join.html" class="button primary small">회원가입</a></li>
@@ -67,7 +67,7 @@
                                 <div class="col-6 col-12-medium">
                                     <input type="checkbox" id="human" name="human" checked>
                                     <label for="human" >아이디 저장</label>　　　　　　　　　　　　　　　　　　　
-                                </div>
+                                </div><br/><br/>
                                 <input class="button primary small" type="submit" value="로그인" >
                                 <a href="index.html" class="button small">　취소　</a><br/>
 
