--- a/src/main/resources/static/board.html
+++ b/src/main/resources/static/board.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>YZ Tour : 떠나고싶다면? 당신의 여행파트너, YZ Tour와 함께</title>
+		<title>YZ Tour : 고객게시판</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -58,41 +58,84 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2 style="margin:0">마이페이지</h2>
+							<h2 style="margin:0">고객게시판</h2>
 						</header>
 
 							<!--Sidebar -->
-							<div class="row gtr-150">
-								<div class="col-4 col-12-medium">
-									<section id="sidebar">
-                                   		<section>
-											<a href="mymenu.html">내가입정보</a>
-									   </section>
-									   <hr/>
-									   <section>
-										   <a href="mylist.html">내가 쓴글</a>
-									   </section>
-										<hr/>
-										<section>
-											<a href="reserve.html">예약확인 / 취소</a>
-										</section>
-								   </section>
-								</div>
 
 								<!-- Contents -->
 								<div class="col-8 col-12-medium imp-medium">
-									<h4>　　기본가입정보</h4>
-									<blockquote>
-										<pre><code>
-											내정보섹션
-										</code></pre>
-									</blockquote>
-										<div style="float:right" >
-										<a href="member.html" >회원정보수정</a> ㅣ
-										<a href="member.html">회원탈퇴</a>
-										</div>
+									<blockquote style="padding:0"><h4>　고객게시판</h4></blockquote>
+										<!--<pre><code>-->
+												<div class="table-wrapper">
+													<table>
+														<thead>
+															<tr>
+																<th>글번호</th>
+																<th>제목</th>
+																<th>작성자</th>
+																<th>작성일</th>
+																<th>조회수</th>
+															</tr>
+														</thead>
+														<tbody>
+															<tr>
+																<td>5</td>
+																<td><a href="detail.html">예제1 글작성을 위한 예시폼입니다.</a></td>
+																<td>워니</td>
+																<td>2022-11-25</td>
+																<td>7</td>
+															</tr>
+															<tr>
+																<td>4</td>
+																<td><a href="detail.html">예제2</a></td>
+																<td>권예지</td>
+																<td>2022-11-25</td>
+																<td>768</td>
+															</tr>
+															<tr>
+																<td>3</td>
+																<td><a href="detail.html">예제3</a></td>
+																<td>이혜원</td>
+																<td>2022-11-25</td>
+																<td>20</td>
+															</tr>
+															<tr>
+																<td>2</td>
+																<td><a href="detail.html">예제4</a></td>
+																<td>쿼카</td>
+																<td>2022-11-25</td>
+																<td>1000</td>
+															</tr>
+															<tr>
+																<td>1</td>
+																<td><a href="detail.html">예제5</a></td>
+																<td>홍길동</td>
+																<td>2022-11-25</td>
+																<td>0</td>
+															</tr>
+														</tbody>
+													</table>
+												</div>
+												<h3 class="hidden">공지사항 검색폼</h3>
+														<fieldset>
+															<legend class="hidden">공지사항 검색 필드</legend>
+															<label class="hidden">검색분류</label>
+															<select name="f" style="width:10%">
+																<option value="title">제목</option>
+																<option value="writerId">작성자</option>
+															</select>
+															<label class="hidden">검색어</label>
+															<input type="text" name="q" value="" style="width:20%"/>
+															<input class="button small" type="submit" value="검색" />
+														</fieldset>
+												<div style="float:right" >
+													<a href="member.html" class="button primary small">글쓰기</a>
+												</div>
+										<!--</code></pre>-->
+
+
 								</div>
-							</div>
 
 
 
