--- a/src/main/resources/static/overseas.html
+++ b/src/main/resources/static/overseas.html
@@ -46,7 +46,7 @@
 							</ul>
 						</li>
 						<li>
-							<a href="notice.html">고객게시판</a>
+							<a href="board.html">고객게시판</a>
 						</li>
 						<li><a href="login.html" class="button primary small">로그인</a></li>
 						<li><a href="join.html" class="button primary small">회원가입</a></li>
