--- a/src/main/resources/static/edit.html
+++ b/src/main/resources/static/edit.html
@@ -62,7 +62,7 @@
 						</header><br/>
 								<!-- Contents -->
 						<div class="col-8 col-12-medium imp-medium" >
-						<blockquote style="padding:0; margin-left: 10em;"><h4>　고객게시판 > 게시글작성</h4></blockquote><br/><br/>
+						<blockquote style="padding:0; margin-left: 10em;"><h4>　고객게시판 > 게시글수정</h4></blockquote><br/><br/>
 							<section>
 								<form action="detail.html" method="post">
 									<div class="row gtr-uniform gtr-50" style="margin-left:15em; width:1400px;">
