--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -82,7 +82,7 @@
 										<h5>#첫 배낭여행 #부모님효도여행 #허니문 </h5><br/>
 									</header>
 									<ul class="actions">
-										<li><a href="#" class="button">해외여행 예약하러가기</a></li>
+										<li><a href="overseas.html" class="button">해외여행 예약하러가기</a></li>
 									</ul>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -97,7 +97,7 @@
 									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>신혼여행, 부모님효도여행, 배낭여행족에게 가성비 좋은 여행코스로 구성된 패키지로 가장 많이 판매된 패키지 Top8 을 선정했습니다.<br>
+									<p>신혼여행, 부모님효도여행, 배낭여행족에게 가성비 좋은 여행코스로 구성된 패키지로 가장 많이 판매된 패키지 Top8 을 선정했습니다.<br/><br/>
 										We selected the top 8 best-selling package by YJ Travel Agency as a package consisting of honeymoon,filial trip for parents, and cost-effective travel courses for backpackers.</p>
 								</div>
 							</div>
@@ -120,7 +120,7 @@
 						</p>
 						<p>#여행의 첫시작?국내여행부터#핫플레이스 #제주</p>
 						<ul class="actions">
-							<li><a href="#" class="button">국내여행 예약하러가기</a></li>
+							<li><a href="local.html" class="button">국내여행 예약하러가기</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -131,13 +131,13 @@
 					<span class="image fit main bottom"><img src="images/airportman.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Q&A게시판</h2>
-							<p>여행관련 문의 게시판입니다</p>
+							<h2>고객게시판</h2>
+							<p>여행/기타문의 게시판입니다</p>
 							자주찾는질문<br/>1:1게시판 <br/><br/>
 						</header>
 						<p>This is a travel inquiry bulletin board We'll give you a quick answer.</p>
 						<ul class="actions">
-							<li><a href="QA.html" class="button">Q&A남기기</a></li>
+							<li><a href="board.html" class="button">Q&A남기기</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
