--- a/src/main/resources/static/join.html
+++ b/src/main/resources/static/join.html
@@ -84,12 +84,15 @@
 					</ul>
 				</nav>
 			</header>
+			<header class="major">
+				<h2 style="margin: 2em 0 0 0" >회원가입</h2>
+			</header>
 
 			<!-- Main -->
 			<div class="container">
 				<div class="input-form-backgroud row">
 					<div class="input-form col-md-12 mx-auto" style="color: rgb(255 255 255 / 50%)">
-						<h4 class="mb-3">회원가입</h4>
+						<!--<h4 class="mb-3">회원가입</h4>-->
 						<form action="index.html" class="validation-form" novalidate>
 							<div class="row">
 								<div class="col-md-6 mb-3">
