--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -59,7 +59,7 @@
             <div class="container" align="center">
                 <header class="major">
                     <h2 style="margin:0">로그인</h2>
-                </header>
+                </header><br/>
                             <form action="index.html" method="post">
                                 <input type="text" name="id" size="2" placeholder="아이디를 입력하세요" maxlength="10" style="width:40%" required>
                                 <input type="password" name="pwd" size="2" placeholder="비밀번호 8자리를 입력하세요" maxlength="8" style="width:40%" required><br/>
@@ -67,7 +67,7 @@
                                 <div class="col-6 col-12-medium">
                                     <input type="checkbox" id="human" name="human" checked>
                                     <label for="human" >아이디 저장</label>　　　　　　　　　　　　　　　　　　　
-                                </div><br/><br/>
+                                </div><br/>
                                 <input class="button primary small" type="submit" value="로그인" >
                                 <a href="index.html" class="button small">　취소　</a><br/>
 
