--- a/src/main/resources/static/mypage.html
+++ b/src/main/resources/static/mypage.html
@@ -81,13 +81,43 @@
 
 								<!-- Contents -->
 								<div class="col-8 col-12-medium imp-medium">
-									<h4>　　기본가입정보</h4>
-									<blockquote>
-										<pre><code>
-											내정보섹션
-										</code></pre>
-									</blockquote>
-										<div style="float:right" >
+									<blockquote style="padding:0"><h4>　내가입정보</h4></blockquote>
+									<!--<blockquote>-->
+									<table>
+										<tr>
+											<td>아이디</td>
+										</tr>
+										<tr>
+											<td >비밀번호(*표시할것)</td>
+										</tr>
+										<tr>
+											<td>이름</td>
+										</tr>
+										<tr>
+											<td>생년월일</td>
+										</tr>
+										<tr>
+											<td>연락처</td>
+										</tr>
+										<tr>
+											<td>이메일</td>
+										</tr>
+										<tr>
+											<td>주소</td>
+										</tr>
+										<tr>
+											<td>상세주소</td>
+										</tr>
+										<tr>
+											<td>가입경로</td>
+										</tr>
+										<tr>
+											<td>추천인</td>
+										</tr>
+									</table>
+
+									<!--</blockquote>-->
+										<div style="float:right" ><br/><br/>
 										<a href="member.html" >회원정보수정</a> ㅣ
 										<a href="member.html">회원탈퇴</a>
 										</div>
