--- a/src/main/resources/static/index원본.html
+++ b/src/main/resources/static/index원본.html
@@ -16,43 +16,33 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-			<header id="header">
-				<h1 id="logo"><a href="index.html">당신의 여행파트너, YZ Tour</a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="index.html">메인</a></li>
-						<li>
-							<a href="#">예약하기</a>
-							<ul>
-								<li><a href="local.html">국내패키지상품</a></li>
-								<li><a href="overseas.html">해외패키지상품</a></li>
-								<li>
-									<a href="#">Submenu</a>
-									<ul>
-										<li><a href="#">Option 1</a></li>
-										<li><a href="#">Option 2</a></li>
-										<li><a href="#">Option 3</a></li>
-										<li><a href="#">Option 4</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li>
-							<a href="mypage.html">마이페이지</a>
-							<ul>
-								<li><a href="#">내가입정보</a></li>
-								<li><a href="#">내가 쓴글</a></li>
-								<li><a href="#">예약확인 / 취소</a></li>
-							</ul>
-						</li>
-						<li>
-							<a href="board.html">고객게시판</a>
-						</li>
-						<li><a href="login.html" class="button primary small">로그인</a></li>
-						<li><a href="join.html" class="button primary small">회원가입</a></li>
-					</ul>
-				</nav>
-			</header>
+				<header id="header">
+					<h1 id="logo"><a href="index.html">당신의 여행파트너, YZ Tour</a></h1>
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">메인</a></li>
+							<li>
+								<a href="#">예약하기</a>
+								<ul>
+									<li><a href="left-sidebar.html">국내패키지상품</a></li>
+									<li><a href="right-sidebar.html">해외패키지상품</a></li>
+									<li>
+										<a href="#">Submenu</a>
+										<ul>
+											<li><a href="#">Option 1</a></li>
+											<li><a href="#">Option 2</a></li>
+											<li><a href="#">Option 3</a></li>
+											<li><a href="#">Option 4</a></li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li><a href="mymenu.html">마이메뉴</a></li>
+							<li><a href="login.html" class="button primary">로그인</a></li>
+							<li><a href="join.html" class="button primary">회원가입</a></li>
+						</ul>
+					</nav>
+				</header>
 
 			<!-- Banner -->
 				<section id="banner">
@@ -82,7 +72,7 @@
 										<h5>#첫 배낭여행 #부모님효도여행 #허니문 </h5><br/>
 									</header>
 									<ul class="actions">
-										<li><a href="overseas.html" class="button">해외여행 예약하러가기</a></li>
+										<li><a href="#" class="button">해외여행 예약하러가기</a></li>
 									</ul>
 								</div>
 								<div class="col-4 col-12-medium">
@@ -97,7 +87,7 @@
 									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>신혼여행, 부모님효도여행, 배낭여행족에게 가성비 좋은 여행코스로 구성된 패키지로 가장 많이 판매된 패키지 Top8 을 선정했습니다.<br/><br/>
+									<p>신혼여행, 부모님효도여행, 배낭여행족에게 가성비 좋은 여행코스로 구성된 패키지로 가장 많이 판매된 패키지 Top8 을 선정했습니다.<br>
 										We selected the top 8 best-selling package by YJ Travel Agency as a package consisting of honeymoon,filial trip for parents, and cost-effective travel courses for backpackers.</p>
 								</div>
 							</div>
@@ -120,7 +110,7 @@
 						</p>
 						<p>#여행의 첫시작?국내여행부터#핫플레이스 #제주</p>
 						<ul class="actions">
-							<li><a href="local.html" class="button">국내여행 예약하러가기</a></li>
+							<li><a href="#" class="button">국내여행 예약하러가기</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -131,13 +121,13 @@
 					<span class="image fit main bottom"><img src="images/airportman.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>고객게시판</h2>
-							<p>여행/기타문의 게시판입니다</p>
-							자주찾는질문<br/>1:1게시판 <br/><br/>
+							<h2>Q&A게시판</h2>
+							<p>여행관련 문의 게시판입니다</p>
+							자주찾는질문<br/>1:1게시판 <br/>
 						</header>
 						<p>This is a travel inquiry bulletin board We'll give you a quick answer.</p>
 						<ul class="actions">
-							<li><a href="board.html" class="button">Q&A남기기</a></li>
+							<li><a href="QA.html" class="button">Q&A남기기</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -201,12 +191,8 @@
 						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>(주) YZ Tour</li>
-						<li>대표자 : 권예지</li>
-						<li>☎ TEL 010-7129-3630</li><br/><br/>
+						<li>&copy; Untitled. All rights reserved.</li><li>대표자 : 권예지</li><li>☎ TEL 010-7129-3630</li><br/><br/>
 						<li>본사주소 : 서울시 강남대로 1000억빌딩 YZ투어</li>
-						<li>사업자등록번호 : 000-81-00000</li><br/><br/>
-						<li>Copyright&copy; YZ TOUR service Inc. All rights reserved.</li>
 					</ul>
 				</footer>
 
