--- a/src/main/resources/static/board원본.html
+++ b/src/main/resources/static/board원본.html
@@ -66,7 +66,7 @@
 									<!-- Search -->
 									<div class="container">
 										<div class="row" style=" margin-left:-4.5em;">
-											<form action="search.html" method="post" name="search" >
+											<form action="board.html" method="get" name="search" >
 												<table style="padding:0.25em 0.75em;">
 													<tr >
 														<td>
