--- a/src/main/resources/static/index원본2.html
+++ b/src/main/resources/static/index원본2.html
@@ -1,9 +1,60 @@
 <!DOCTYPE HTML>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout">
+<!--
+	Landed by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/default_layout">
 	<th:block layout:fragment="content">
+	<!--<head>
+		<title>YZ Tour : 떠나고싶다면? 당신의 여행파트너, YZ Tour와 함께   </title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>-->
 		<body class="is-preload landing">
 			<div id="page-wrapper">
-			 <!--Header-->
+
+			<!-- Header -->
+			<!--<header id="header">
+				<h1 id="logo"><a href="index원본.html">당신의 여행파트너, YZ Tour</a></h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="index원본.html">메인</a></li>
+						<li>
+							<a href="#">예약하기</a>
+							<ul>
+								<li><a href="local.html">국내패키지상품</a></li>
+								<li><a href="overseas.html">해외패키지상품</a></li>
+								<li>
+									<a href="#">Submenu</a>
+									<ul>
+										<li><a href="#">Option 1</a></li>
+										<li><a href="#">Option 2</a></li>
+										<li><a href="#">Option 3</a></li>
+										<li><a href="#">Option 4</a></li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="mypage.html">마이페이지</a>
+							<ul>
+								<li><a href="#">내가입정보</a></li>
+								<li><a href="#">내가 쓴글</a></li>
+								<li><a href="#">예약확인 / 취소</a></li>
+							</ul>
+						</li>
+						<li>
+							<a href="board.html">고객게시판</a>
+						</li>
+						<li><a href="login.html" class="button primary small">로그인</a></li>
+						<li><a href="join.html" class="button primary small">회원가입</a></li>
+					</ul>
+				</nav>
+			</header>-->
+
 			<!-- Banner -->
 				<section id="banner">
 					<div class="content">
@@ -134,15 +185,44 @@
 						<form method="post" action="#" class="cta">
 							<div class="row gtr-uniform gtr-50">
 								<div class="col-8 col-12-xsmall"><input type="text" name="search" placeholder="다음엔 어디로 여행갈까?" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="지도보기" class="fit primary small" /></div>
+								<div class="col-4 col-12-xsmall"><input type="submit" value="지도보기" class="fit primary" /></div>
 							</div>
 						</form>
 					</div>
 				</section>
 
-			 <!--Footer-->
+			<!-- Footer -->
+				<!--<footer id="footer">
+					<ul class="icons">
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>(주) YZ Tour</li>
+						<li>대표자 : 권예지</li>
+						<li>☎ TEL 010-7129-3630</li><br/><br/>
+						<li>본사주소 : 서울시 강남대로 1000억빌딩 YZ투어</li>
+						<li>사업자등록번호 : 000-81-00000</li><br/><br/>
+						<li>Copyright&copy; YZ TOUR service Inc. All rights reserved.</li>
+					</ul>
+				</footer>-->
 
 			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
 		</body>
 	</th:block>
 </html>
