--- a/src/main/resources/static/overseas원본.html
+++ b/src/main/resources/static/overseas원본.html
@@ -58,56 +58,60 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>해외여행패키지상품</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<h2>해외여행 지금 여기!</h2>
 						</header>
 						<div class="row gtr-150">
 							<div class="col-8 col-12-medium">
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
-									</section>
+										<div class="section">
+											<input type="radio" name="slide" id="slide01" checked>
+											<input type="radio" name="slide" id="slide02">
+											<input type="radio" name="slide" id="slide03">
 
-							</div>
-							<div class="col-4 col-12-medium">
+											<div class="slidewrap">
+												<ul class="slidelist">
+													<li>
+														<a>
+															<label for="slide03" class="left"></label>
+															<img src="/images/동유럽.jpg">
+															<label for="slide02" class="right"></label>
+														</a>
+													</li>
+													<li>
+														<a>
+															<label for="slide01" class="left"></label>
+															<img src="/images/방콕.jpg">
+															<label for="slide03" class="right"></label>
+														</a>
+													</li>
+													<li>
+														<a>
+															<label for="slide02" class="left"></label>
+															<img src="/images/서유럽.jpg">
+															<label for="slide01" class="right"></label>
+														</a>
+													</li>
 
-								<!-- Sidebar -->
-									<section id="sidebar">
-										<section>
-											<h3>Magna Feugiat</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
+													<div class="slide-control">
+														<div class="control01">
+															<label for="slide03" class="left"><</label>
+															<label for="slide02" class="right"><</label>
+														</div>
+														<div class="control02">
+															<label for="slide01" class="left"><</label>
+															<label for="slide03" class="right"><</label>
+														</div>
+														<div class="control03">
+															<label for="slide02" class="left"><</label>
+															<label for="slide01" class="right"><</label>
+														</div>
+													</div>
 												</ul>
-											</footer>
-										</section>
-										<hr />
-										<section>
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-											<h3>Amet Lorem Tempus</h3>
-											<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-											<footer>
-												<ul class="actions">
-													<li><a href="#" class="button">Learn More</a></li>
-												</ul>
-											</footer>
-										</section>
+											</div>
+										</div>
 									</section>
-
 							</div>
 						</div>
 					</div>
