--- a/src/main/resources/static/join원본.html
+++ b/src/main/resources/static/join원본.html
@@ -10,8 +10,8 @@
 		<title>YZ Tour : 회원가입</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 
 
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
@@ -118,8 +118,8 @@
 									</div>
 								</div>
 								<div class="col-md-6 mb-3">
-									<label for="phoneNumber">연락처</label>
-									<input type="text" class="form-control" id="nickname" placeholder="" name="phone" maxlength="13"required>
+									<label for="phoneNumber" >연락처</label>
+									<input type="text" class="form-control" id="phoneNumber" placeholder="" name="phone" maxlength="13" required>
 									<div class="invalid-feedback">
 										연락처를 입력해주세요.
 									</div>
